--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -8,7 +8,7 @@
     </p>
     <mat-action-row>
       <button color="primary" mat-button>EDIT</button>
-      <button color="warn" mat-button>DELETE</button>
+      <button color="warn"  mat-button (click)="onDelete(post.id)">DELETE</button>
 
     </mat-action-row>
   </mat-expansion-panel>
