--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,13 +1,17 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
       <mat-form-field>
-          <input placeholder="Post Title" type="text" name="title" matInput ngModel required minlength="3" #title="ngModel">
+          <input placeholder="Post Title" type="text" name="title" matInput
+           [ngModel]="post.title"
+           required minlength="3" #title="ngModel">
           <mat-error *ngIf="title.invalid">
             Please enter post title
           </mat-error>
         </mat-form-field>
       <mat-form-field>
-        <textarea placeholder="Post Content" matInput name="content" rows="6" ngModel required #content="ngModel" ></textarea>
+        <textarea placeholder="Post Content" matInput name="content" rows="6"
+       [ngModel] ="post.content"
+         required #content="ngModel" ></textarea>
         <mat-error *ngIf="content.invalid">
           Please enter content
         </mat-error>
