--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -7,7 +7,7 @@
       {{post.content}}
     </p>
     <mat-action-row>
-      <button color="primary" mat-button>EDIT</button>
+      <a mat-button color="primary" [routerLink]="['/edit',post.id]" routerLinkActive="router-link-active" >EDIT</a>
       <button color="warn"  mat-button (click)="onDelete(post.id)">DELETE</button>
 
     </mat-action-row>
