--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,29 +1,39 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form *ngIf="!isLoading" (submit)="onSavePost(postForm)" #postForm="ngForm">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
       <mat-form-field>
-          <input placeholder="Post Title" type="text" name="title" matInput
-           [ngModel]="post?.title"
-           required minlength="3" #title="ngModel">
-          <mat-error *ngIf="title.invalid">
-            Please enter post title
-          </mat-error>
+          <input
+          matInput
+          type="text"
+          formControlName="title"
+          placeholder="Post Title"
+          >
+          <mat-error *ngIf="form.get('title').invalid">Please Enter a title for post!!</mat-error>
         </mat-form-field>
-      <mat-form-field>
-        <textarea placeholder="Post Content" matInput name="content" rows="6"
-       [ngModel] ="post?.content"
-         required #content="ngModel" ></textarea>
-        <mat-error *ngIf="content.invalid">
-          Please enter content
-        </mat-error>
-      </mat-form-field>
-      <button mat-raised-button
-      color="accent"
-      [disabled]="!postForm.valid"
-       type="submit">Save Post</button>
+
+        <div>
+          <button mat-stroked-button type="button" (click)="filepicker.click()">Pick Image</button>
+          <input type="file" #filepicker (change)="onImagePicked($event)">
+        </div>
+        <div class="image-preview" *ngIf="imagePreview!=='' && imagePreview && form.get('image').valid">
+          <img [src]="imagePreview" [alt]="form.value.title">
+        </div>
+
+        <mat-form-field>
+          <textarea
+          matInput
+          rows="6"
+          formControlName="content"
+          placeholder="Post content"
+          >
+        </textarea>
+        <mat-error *ngIf="form.get('content').invalid">Please Enter content for post!!</mat-error>
+        </mat-form-field>
+        <button mat-raised-button
+                color="primary" type="submit">
+                Save Post
+        </button>
   </form>
-
-
 
 
 </mat-card>
