done with pagination

--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,20 +1,19 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
-<mat-accordion *ngIf="!isLoading && posts.length>0" multi="true" >
+<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-      {{post.title}}
+      {{ post.title }}
     </mat-expansion-panel-header>
     <div class="post-image">
       <img [src]="post.imagePath" [alt]="post.title">
     </div>
-    <p>
-      {{post.content}}
-    </p>
+    <p>{{ post.content }}</p>
     <mat-action-row>
-      <a mat-button color="primary" [routerLink]="['/edit',post.id]" routerLinkActive="router-link-active" >EDIT</a>
-      <button color="warn"  mat-button (click)="onDelete(post.id)">DELETE</button>
-
+      <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+      <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="info-text mat-body-1" *ngIf="posts.length<=0 && !isLoading">No posts added yet</p>
+<mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"
+  *ngIf="posts.length > 0"></mat-paginator>
+<p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
