--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
       <a *ngIf="userIsAuthenticated" mat-button [routerLink]="['/create']" routerLinkActive="mat-accent" >New Post</a>
     </li>
     <li>
-      <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/login']" routerLinkActive="mat-accent" >Login</a>
+      <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/auth/login']" routerLinkActive="mat-accent" >Login</a>
     </li>
     <li>
-      <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/signup']" routerLinkActive="mat-accent" >Signup</a>
+      <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/auth/signup']" routerLinkActive="mat-accent" >Signup</a>
     </li>
     <li>
       <a *ngIf="userIsAuthenticated"(click)="onLogout()" mat-button  >Logout</a>
